# libgracht

./: .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  README.md  arena.c  client.c  client_config.c  config.h.in  control.c  crc.c  dispatch.c  hashtable.c  libgracht.pack  server.c  server_config.c  shared.c
.github/workflows/: cmake.yml
chef/: Vali.cmake  libgracht.yaml
docs/: stream-roadmap.md
generator/: parser.py
generator/common/: shared.py
generator/examples/: test_service.gr  test_structs.gr  test_types.gr
generator/languages/: langc.py  shared.py
generator/passes/: consolidate.py  synthesize.py  validate.py
generator/tests/: test_generator.py
include/: aio.h  arena.h  buffer_pool.h  client_private.h  compiler.h  control.h  crc.h  debug.h  gatomic.h  hashtable.h  list.h  logging.h  queue.h  rwlock.h  server_private.h  stack.h  stream_pool_registry.h  thread_api.h  utils.h
include/gracht/: aio.h  capability.h  client.h  crc.h  debug.h  list.h  platform.h  server.h  threads.h  types.h
include/gracht/link/: link.h  socket.h  vali.h
link/socket/: client.c  server.c  shared.c  socket_os.h
link/vali-ipc/: client.c  message.c  server.c
protocols/: auth.gr  control.gr
runtime/: CMakeLists.txt  arena.c  buffer_pool.c  client.c  client_config.c  control.c  crc.c  dispatch.c  dispatch_generic.c  dispatch_vali.c  hashtable.c  queue.c  server.c  server_config.c  shared.c  stack.c  stream_pool_registry.c
runtime/link/socket/: client.c  server.c  shared.c  socket_os.h
runtime/link/vali-ipc/: client.c  message.c  private.h  server.c  shared.c
tests/: CMakeLists.txt  init_client_socket.c  init_server_socket.c  run-tests.sh  server_handlers.c  test_data.c  test_protocol.xml
tests/client/: main.c  test_deferring.c  test_events.c  test_multiple.c  test_shutdown.c  test_streams.c  test_string.c  test_structure.c  test_variable.c
tests/client_parallel/: main.c
tests/protocols/: test_service.gr
tests/server/: main.c
tests/server_mt/: main.c
